{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 73,
  "lineage": "19347d09-4f4d-e2ec-c839-908800f56128",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-core-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092697108e3cdc15b",
            "association_id": "eipassoc-07ed2170c8d14d9e4",
            "domain": "vpc",
            "id": "eipalloc-092697108e3cdc15b",
            "instance": "i-01eb32a39ae145611",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00bb7bc21b1532c7c",
            "private_dns": "ip-10-0-51-255.ec2.internal",
            "private_ip": "10.0.51.255",
            "public_dns": "ec2-18-210-115-50.compute-1.amazonaws.com",
            "public_ip": "18.210.115.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.game_server_tf",
            "aws_security_group.ingress-all-core",
            "aws_subnet.subnet-uno",
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "game_server_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:868957254485:instance/i-01eb32a39ae145611",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eb32a39ae145611",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00bb7bc21b1532c7c",
            "private_dns": "ip-10-0-51-255.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.51.255",
            "public_dns": "ec2-18-209-171-39.compute-1.amazonaws.com",
            "public_ip": "18.209.171.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e53b6c3cdf4e37f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-029aa1dd2b863d784"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025885ad52ed35380",
            "tags": {
              "Build_Type": "TERRAFORM",
              "Name": "Acorn's Game Server DEV TERRAFORM"
            },
            "tags_all": {
              "Build_Type": "TERRAFORM",
              "Name": "Acorn's Game Server DEV TERRAFORM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029aa1dd2b863d784"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-core",
            "aws_subnet.subnet-uno",
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "core-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868957254485:internet-gateway/igw-0dfe0e7d724dae498",
            "id": "igw-0dfe0e7d724dae498",
            "owner_id": "868957254485",
            "tags": {
              "Name": "core-env-gw"
            },
            "tags_all": {
              "Name": "core-env-gw"
            },
            "vpc_id": "vpc-033f135e61b2b0a74"
          },
          "dependencies": [
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-core-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868957254485:route-table/rtb-0af84cbb16781d438",
            "id": "rtb-0af84cbb16781d438",
            "owner_id": "868957254485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfe0e7d724dae498",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "core-env-route-table"
            },
            "tags_all": {
              "Name": "core-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f135e61b2b0a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.core-env-gw",
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058ce88aa077560f6",
            "route_table_id": "rtb-0af84cbb16781d438",
            "subnet_id": "subnet-025885ad52ed35380"
          },
          "dependencies": [
            "aws_internet_gateway.core-env-gw",
            "aws_route_table.route-table-core-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868957254485:security-group/sg-029aa1dd2b863d784",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029aa1dd2b863d784",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "868957254485",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-033f135e61b2b0a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868957254485:subnet/subnet-025885ad52ed35380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025885ad52ed35380",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868957254485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-033f135e61b2b0a74"
          },
          "dependencies": [
            "aws_vpc.core-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "core-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868957254485:vpc/vpc-033f135e61b2b0a74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e30633acfb526770",
            "default_route_table_id": "rtb-01d6a9d3fbad2eff2",
            "default_security_group_id": "sg-06ad6866eea196ab0",
            "dhcp_options_id": "dopt-002bf5e32c6f6c1c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033f135e61b2b0a74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d6a9d3fbad2eff2",
            "owner_id": "868957254485",
            "tags": {
              "Name": "core-env"
            },
            "tags_all": {
              "Name": "core-env"
            }
          }
        }
      ]
    }
  ]
}